--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "description": "pkl nahwa",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
     "dev": "nodemon ./nbin/www",
-    "create-data": "node data/generateFakeData.js"
+    "create-data": "node data/generateFakeData.js",
+    "heroku-postbuild": "cd client && yarn install && yarn build"
   },
   "author": "Zahidi",
   "license": "ISC",
