--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
     "dev": "nodemon ./nbin/www",
-    "create-data": "node data/generateFakeData.js",
-    "heroku-postbuild": "cd client && yarn install && yarn build"
+    "create-data": "node data/generateFakeData.js"
   },
   "author": "Zahidi",
   "license": "ISC",
