--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
-    "dev": "nodemon ./nbin/www",
+    "dev": "nodemon ./bin/www",
     "create-data": "node data/generateFakeData.js"
   },
   "author": "Zahidi",
