--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "pkl nahwa",
-  "main": "./bin/WWW",
+  "main": "./bin/www",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www",
@@ -21,5 +21,8 @@
     "mongoose": "^5.8.1",
     "morgan": "~1.9.1",
     "sass": "^1.25.0"
+  },
+  "engines": {
+    "node": "13.7.0"
   }
 }
